--- a/index.html
+++ b/index.html
@@ -98,23 +98,38 @@
       background-color: #e6e600;
       color: white;
     }
-    .contact {
-      background-color: black;
-      color: white;
-      padding: 2rem;
-      text-align: center;
-    }
-    .form-input {
-      display: block;
-      margin-bottom: 1rem;
-      width: 100%;
-      padding: 1rem;
-      border: none;
-      border-radius: 0.5rem;
-      background-color: #333;
-      color: white;
-      font-size: 1rem;
-    }
-    .form-input:focus {
-      outline: none;
+     <div class="contact-form">
+    <h2>Contato</h2>
+    <form action="#" method="post">
+      <div class="form-group">
+        <label for="name">Nome:</label>
+        <input type="text" id="name" name="name" class="form-input" required>
+      </div>
+      <div class="form-group">
+        <label for="email">E-mail:</label>
+        <input type="email" id="email" name="email" class="form-input" required>
+      </div>
+      <div class="form-group">
+        <label for="message">Mensagem:</label>
+        <textarea id="message" name="message" class="form-input" required></textarea>
+      </div>
+      <button type="submit" class="btn-primary">Enviar</button>
+    </form>
+    <div class="contact-info">
+      <h3>Informações de Contato</h3>
+      <p>Endereço: Rua dos Programadores, 123 - São Paulo/SP</p>
+      <p>Telefone: (11) 1234-5678</p>
+      <p>E-mail: contato@bdgtl.com.br</p>
+    </div>
+  </div>
 
+</main>
+
+<footer>
+  <div class="container">
+    <p>&copy; 2023 B.DGTL. Todos os direitos reservados.</p>
+  </div>
+</footer>
+
+</body>
+</html>
