--- a/index.html
+++ b/index.html
@@ -1,135 +1,391 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>B.DGTL - Sua agência de marketing digital</title>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
-  <style>
-    * {
-      box-sizing: border-box;
-    }
-    body {
-      margin: 0;
-      font-family: 'Open Sans', sans-serif;
-      font-size: 16px;
-      color: #333;
-    }
-    header {
-      background-color: black;
-      color: yellow;
-      padding: 1rem;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-    nav {
-      display: flex;
-      justify-content: center;
-    }
-    nav a {
-      color: yellow;
-      text-decoration: none;
-      padding: 0 1rem;
-      font-weight: bold;
-    }
-    .hero {
-      background-image: url('https://i.imgur.com/3o8q3qF.jpg');
-      background-size: cover;
-      background-position: center;
-      height: calc(100vh - 4rem);
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-      color: white;
-    }
-    h1 {
-      font-size: 4rem;
-      margin-bottom: 1rem;
-    }
-    .hero-btn {
-      font-size: 1.5rem;
-      padding: 1rem 2rem;
-      background-color: yellow;
-      color: black;
-      border: none;
-      border-radius: 2rem;
-      margin-top: 2rem;
-      text-transform: uppercase;
-      letter-spacing: 0.1rem;
-      transition: background-color 0.2s;
-    }
-    .hero-btn:hover {
-      background-color: #e6e600;
-      color: white;
-    }
-    .content {
-      padding: 2rem;
-      text-align: center;
-    }
-    h2 {
-      font-size: 3rem;
-      margin-bottom: 1rem;
-    }
-    p {
-      font-size: 1.25rem;
-      margin-bottom: 2rem;
-    }
-    .cta {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      margin-top: 2rem;
-    }
-    .cta-btn {
-      font-size: 1.25rem;
-      padding: 0.75rem 1.5rem;
-      background-color: yellow;
-      color: black;
-      border: none;
-      border-radius: 2rem;
-      margin-top: 1rem;
-      text-transform: uppercase;
-      letter-spacing: 0.1rem;
-      transition: background-color 0.2s;
-    }
-    .cta-btn:hover {
-      background-color: #e6e600;
-      color: white;
-    }
-     <div class="contact-form">
-    <h2>Contato</h2>
-    <form action="#" method="post">
-      <div class="form-group">
-        <label for="name">Nome:</label>
-        <input type="text" id="name" name="name" class="form-input" required>
-      </div>
-      <div class="form-group">
-        <label for="email">E-mail:</label>
-        <input type="email" id="email" name="email" class="form-input" required>
-      </div>
-      <div class="form-group">
-        <label for="message">Mensagem:</label>
-        <textarea id="message" name="message" class="form-input" required></textarea>
-      </div>
-      <button type="submit" class="btn-primary">Enviar</button>
-    </form>
-    <div class="contact-info">
-      <h3>Informações de Contato</h3>
-      <p>Endereço: Rua dos Programadores, 123 - São Paulo/SP</p>
-      <p>Telefone: (11) 1234-5678</p>
-      <p>E-mail: contato@bdgtl.com.br</p>
-    </div>
-  </div>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>B.DGTL - Soluções em Tecnologia</title>
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+	<style>
+		body {
+			font-family: 'Montserrat', sans-serif;
+			margin: 0;
+			padding: 0;
+			background-color: #fff;
+			color: #000;
+		}
 
-</main>
+		header {
+			display: flex;
+			justify-content: space-between;
+			align-items: center;
+			background-color: #000;
+			padding: 1rem;
+			position: fixed;
+			top: 0;
+			left: 0;
+			right: 0;
+		}
 
-<footer>
-  <div class="container">
-    <p>&copy; 2023 B.DGTL. Todos os direitos reservados.</p>
-  </div>
-</footer>
+		.logo {
+			font-size: 2rem;
+			font-weight: bold;
+			color: #ffc107;
+		}
 
-</body>
-</html>
+		nav ul {
+			display: flex;
+			list-style: none;
+			margin: 0;
+			padding: 0;
+		}
+
+		nav ul li {
+			margin-left: 2rem;
+		}
+
+		nav ul li a {
+			color: #fff;
+			text-decoration: none;
+			transition: all .2s ease-in-out;
+		}
+
+		nav ul li a:hover {
+			color: #ffc107;
+		}
+
+		.hero {
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			justify-content: center;
+			min-height: 100vh;
+			background-color: #ffc107;
+			color: #000;
+			text-align: center;
+		}
+
+		.hero h1 {
+			font-size: 5rem;
+			font-weight: bold;
+			margin: 0;
+			padding: 0;
+			line-height: 1.2;
+		}
+
+		.hero p {
+			font-size: 2rem;
+			margin: 2rem 0 0 0;
+			padding: 0;
+		}
+
+		.btn {
+			display: inline-block;
+			padding: 1rem 2rem;
+			margin-top: 2rem;
+			border: none;
+			border-radius: 2rem;
+			background-color: #000;
+			color: #fff;
+			font-size: 1.5rem;
+			font-weight: bold;
+			text-transform: uppercase;
+			text-decoration: none;
+			transition: all .2s ease-in-out;
+			cursor: pointer;
+		}
+
+		.btn:hover {
+			background-color: #ffc107;
+			color: #000;
+		}
+
+		.features {
+			display: flex;
+			flex-wrap: wrap;
+			justify-content: center;
+			align-items: center;
+			padding: 5rem;
+		}
+
+		.feature {
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			margin: 2rem;
+			max-width: 30rem;
+			text-align: center;
+		}
+
+		.feature img {
+			height: 10rem;
+			margin-bottom: 2rem;
+		}
+
+		.feature h2 {
+			font-size: 2.5rem;
+			font-weight: bold;
+			margin: 0;
+			padding: 0;
+		}
+
+		.feature p {
+			font-size: 1.5rem;
+			margin: 1rem 0
+	}
+
+	.cta {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		margin: 2rem 0;
+	}
+
+	.cta h2 {
+		font-size: 2rem;
+		margin-bottom: 1rem;
+	}
+
+	.cta p {
+		font-size: 1.5rem;
+		text-align: center;
+		margin-bottom: 2rem;
+	}
+
+	.btn {
+		padding: 1rem 2rem;
+		background-color: #F5A623;
+		color: #fff;
+		font-size: 1.5rem;
+		border: none;
+		border-radius: 5px;
+		cursor: pointer;
+		transition: all 0.3s ease;
+	}
+
+	.btn:hover {
+		transform: scale(1.05);
+	}
+
+	.form-input {
+		display: block;
+		margin-bottom: 1rem;
+		width: 100%;
+		padding: 1rem;
+		border: none;
+		border-radius: 5px;
+		background-color: #fff;
+		color: #333;
+		font-size: 1.2rem;
+	}
+
+	.form-textarea {
+		display: block;
+		margin-bottom: 1rem;
+		width: 100%;
+		padding: 1rem;
+		border: none;
+		border-radius: 5px;
+		background-color: #fff;
+		color: #333;
+		font-size: 1.2rem;
+		resize: vertical;
+		height: 150px;
+	}
+
+	.form-submit {
+		display: block;
+		background-color: #F5A623;
+		color: #fff;
+		padding: 1rem 2rem;
+		font-size: 1.5rem;
+		border: none;
+		border-radius: 5px;
+		cursor: pointer;
+		transition: all 0.3s ease;
+		margin-top: 1rem;
+	}
+
+	.form-submit:hover {
+		transform: scale(1.05);
+	}
+
+	.contact-box {
+		background-color: #000;
+		color: #fff;
+		padding: 2rem;
+		margin-top: 2rem;
+	}
+
+	.contact-box h2 {
+		font-size: 2rem;
+		margin-bottom: 1rem;
+	}
+
+	.contact-box p {
+		font-size: 1.5rem;
+		margin-bottom: 2rem;
+	}
+
+	.contact-box ul {
+		margin-bottom: 2rem;
+	}
+
+	.contact-box li {
+		font-size: 1.2rem;
+		margin-bottom: 0.5rem;
+	}
+
+	.contact-box a {
+		color: #fff;
+		font-size: 1.2rem;
+		text-decoration: none;
+	}
+
+	.contact-box a:hover {
+		text-decoration: underline;
+	}
+
+	@media (min-width: 768px) {
+		.container {
+			max-width: 900px;
+		}
+
+		.features {
+			display: flex;
+			flex-wrap: wrap;
+			justify-content: space-between;
+		}
+
+		.feature {
+			flex-basis: calc(33.33% - 1rem);
+			margin-bottom: 2rem;
+		}
+	.feature__icon {
+  font-size: 3rem;
+  margin-bottom: 1rem;
+  color: #fff;
+}
+
+.feature__title {
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin-bottom: 1rem;
+  text-transform: uppercase;
+  color: #fff;
+}
+
+.feature__description {
+  font-size: 1.2rem;
+  line-height: 1.5;
+  color: #fff;
+}.feature__description {
+  font-size: 1.2rem;
+  line-height: 1.5;
+  color: #fff;
+}
+
+.cta {
+  display: inline-block;
+  padding: 1.25rem 2.5rem;
+  background-color: #f7b731;
+  color: #fff;
+  font-weight: bold;
+  text-decoration: none;
+  border-radius: 3px;
+  transition: all 0.2s ease-in-out;
+  margin-top: 2rem;
+}
+
+.cta:hover {
+  transform: translateY(-3px);
+  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
+}
+
+.cta:active {
+  transform: translateY(-1px);
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
+}
+
+.contact-form {
+  background-color: #333;
+  color: #fff;
+  padding: 2rem;
+  border-radius: 3px;
+  margin-top: 3rem;
+}
+
+.contact-form label {
+  font-size: 1.2rem;
+  display: block;
+  margin-bottom: 0.5rem;
+}
+
+.contact-form input[type="text"],
+.contact-form input[type="email"],
+.contact-form textarea {
+  display: block;
+  margin-bottom: 1rem;
+  width: 100%;
+  padding: 1rem;
+  border: none;
+  background-color: #555;
+  color: #fff;
+  border-radius: 3px;
+  font-size: 1rem;
+  font-family: "Montserrat", sans-serif;
+}
+
+.contact-form input[type="submit"] {
+  display: inline-block;
+  padding: 1.25rem 2.5rem;
+  background-color: #f7b731;
+  color: #fff;
+  font-weight: bold;
+  text-decoration: none;
+  border-radius: 3px;
+  transition: all 0.2s ease-in-out;
+  margin-top: 1rem;
+  border: none;
+}
+
+.contact-form input[type="submit"]:hover {
+  transform: translateY(-3px);
+  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
+}
+
+.contact-form input[type="submit"]:active {
+  transform: translateY(-1px);
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
+}
+
+.contact-form input[type="text"]:focus,
+.contact-form input[type="email"]:focus,
+.contact-form textarea:focus {
+  outline: none;
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
+}
+
+.contact-form textarea {
+  height: 150px;
+  resize: none;
+}
+.contact-form textarea {
+  height: 150px;
+  resize: none;
+}
+
+.contact-form input[type="submit"] {
+  background-color: #e6b800;
+  color: #000;
+  border: none;
+  padding: 1rem 2rem;
+  font-size: 1.2rem;
+  text-transform: uppercase;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+}
+
+.contact-form input[type="submit"]:hover {
+  background-color: #fff;
+  color: #000;
+}
